// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ServerInfo > should handle different data types 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          987654321
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v20.10.0
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          0
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ServerInfo > should handle long hostnames 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          very-long-hostname-server.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          1234567890
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v18.17.0
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          42
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ServerInfo > should handle special characters in values 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server_with_underscores.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          1234567890
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v18.17.0 (with extra info)
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          42
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ServerInfo > should render all server information fields 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          1234567890
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v18.17.0
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          42
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ServerInfo > should render correct number of rows 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          1234567890
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v18.17.0
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          42
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ServerInfo > should render table with correct headers 1`] = `
<DocumentFragment>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;{let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;{let k=y==="class",S=k&&a?m.map(f=&gt;a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <table
    class="chakra-table__root css-a2tetu"
  >
    <thead
      class="chakra-table__header"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Name
        </th>
        <th
          class="chakra-table__columnHeader css-kim7sg"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      class="chakra-table__body"
    >
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Hostname
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server.example.com
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Uptime
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          1234567890
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Server ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          server-456
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Deployment ID
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          deploy-123
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Node Versions
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          v18.17.0
        </td>
      </tr>
      <tr
        class="chakra-table__row css-11ot24d"
      >
        <td
          class="chakra-table__cell css-1luypx0"
        >
          Extension Sync | Total Sync All Count
        </td>
        <td
          class="chakra-table__cell css-1luypx0"
        >
          42
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
